Spring boot 3.0.0 (#70)
* ReactiveQuerydslPredicateExecutorTest cleanup

* current progress

* further fixes

* fixed QuerydslR2dbcRepository

* test compilation fixes

* bumped major

* bumped java version in maven.yml

* updated CHANGELOG.md

* switched maven compiler plugin to use release argument

* cleanup of pom.xml

* removed spring.factories
added org.springframework.boot.autoconfigure.AutoConfiguration.imports

* fixed SpringDataJdbcAnnotationProcessorTest

* annotation processor fixes

* added CrudRepository to PagingEntityPagingRepository

* fixed PagingEntityPagingRepository
fixed QuerydslR2dbcRepositoryTest

* fixed QuerydslR2dbcRepositoryTest

* replaced use of PersistenceConstructor with PersistenceCreator

* added jaxb-api to coveralls

* replaced explicit types with var

* refactored some of the classes to records

* fixed QuerydslR2dbcRepositoryTest

* [maven-release-plugin] prepare release infobip-spring-data-querydsl-8.0.0-M2

* [maven-release-plugin] prepare for next development iteration

* added simple foo test to spring data jdbc annotation processor

* upgraded to spring boot dependencies 3.0.0-RC2

* upgraded to Spring Boot 3.0.0

* upgraded surefire and failsafe plugins

* removed spring milestones repository

* fixed QFooWithTableName

Co-authored-by: infobip-ci <infobip-ci@infobip.com>